fix: navigation sidebar on mobile;

--- a/src/styles/site.css
+++ b/src/styles/site.css
@@ -1,3 +1,7 @@
+.ui.segment.pushable {
+    margin: 0;
+}
+
 .hidden.menu {
     display: none;
 }
